fix: scrollbar

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -40,6 +40,7 @@ a {
 
 html::-webkit-scrollbar {
   width: 0;
+  display: none;
 }
 
 body {
